02/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
        - name: www
          persistentVolumeClaim:
            claimName: www
      containers:
        - image: exponer/arch02:latest
          name: app
          volumeMounts:
            - name: www
              mountPath: /var/www/public_html
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "cp -r /var/app/. /var/www/public_html" ]
